--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
+    "react-mic": "^12.4.6",
+    "react-player": "^2.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
