--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "ffmpeg": "0.0.4",
     "firebase": "^8.2.7",
+    "mic-recorder-to-mp3": "^2.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
@@ -17,6 +18,7 @@
     "react-player": "^2.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "web-audio-recorder-js": "0.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
